@@ -83,6 +83,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
             <version>${javafx.version}</version>
+            <classifier>win</classifier>
         </dependency>
 
 
@@ -91,6 +92,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
             <version>${javafx.version}</version>
+            <classifier>win</classifier>
         </dependency>
 
 
@@ -99,6 +101,12 @@
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.1</version>
         </dependency>
 
     </dependencies>
@@ -124,14 +132,6 @@
                 <configuration>
                     <mainClass>org.unisoftware.gestioncurricular.frontend.JavaFXApplication</mainClass>
                     <layout>JAR</layout>
-                    <jvmArguments>
-                        --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
-                        --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
-                        --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED
-                        --add-exports javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED
-                        --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
-                        --add-opens javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
-                    </jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
